# antsy

./: .gitignore  Cargo.toml  adam.json  speedy.json
src/: app.rs  bar.rs  controls.rs  float.rs  main.rs  opts.rs  prestige.rs  render.rs  save.rs  ui.rs  upgrade.rs
src/controls/: normal.rs  prestige.rs
src/render/: normal.rs  prestige.rs  util.rs
src/ui/: normal.rs  prestige.rs
